--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webpack</title>
+  <title>IT WORKS!!!</title>
 </head>
 <body>
-  <header>
-    <h1>NC2</h1>
-  </header>
+  <div class="wrap">
+    <h1>IT WORKS</h1>
+    <img src="img/cat.png" alt="">
+  </div>
+    
+
 </body>
 </html>
