--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>IT WORKS</h1>
+    <h1>IT WORKS!!!</h1>
     <img src="img/cat.png" alt="">
   </div>
     
