--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
   <header class="header">
     <div class="container">
       <div class="header-content">
@@ -29,22 +28,6 @@
               <button class="main-nav__list-item dropdown__btn" href="#">Кабинет</button>
               <div class="dropdown__inner">
                 <div class="dropdown__content">
-                  <ul class="cabinet-nav">
-                    <li>
-                      <div class="cabinet-nav__header">
-                        <b class="cabinet-nav__title">Антон Клименков</b><!-- /cabinet-nav__title -->
-                        <span class="cabinet-nav__id"><b>ID:</b>00000030</span>
-                      </div><!-- /cabinet-nav__header -->
-                    </li>
-                    <li><a href="#">Кабинет</a></li>
-                    <li><a href="#">Мои проекты</a></li>
-                    <li><a href="#">Профиль</a></li>
-                    <li>
-                      <div class="cabinet-nav__footer">
-                        <a href="#">Выход</a>
-                      </div><!-- /cabinet-nav__footer -->
-                    </li>
-                  </ul><!-- /cabinet-nav -->
                 </div><!-- dropdown__content -->
               </div><!-- dropdown__inner -->
             </li>
@@ -53,21 +36,27 @@
       </div><!-- header-content -->
     </div><!-- container -->
   </header><!-- header  -->
-
   <main class="main">
     <section class="intro">
       <div class="container">
-
+        <div class="intro-content">
+          <div class="intro-slogan">
+            <h1 class="intro-slogan__title">Расчёт вашего проекта за <br> 15 минут</h1>
+            <h2 class="intro-slogan__subtitle">От идеи к результату</h2>
+            <button type="button" class="btn btn-primary btn--slogan">Расчитать</button>
+          </div><!-- /intro-slogan -->
+          <div class="intro-media">
+            <img class=".img-responsive" src="img/intro/intro-main.png" width="636" height="527" alt="Изображение блока intro">
+          </div><!-- /intro-media -->
+        </div><!-- /intro-content -->
       </div><!-- /container -->
     </section><!-- /head -->
   </main><!-- main -->
-
   <footer class="footer">
     <div class="container">
 
     </div><!-- /container -->
   </footer> <!-- footer -->
-
 </body>
 
 </html>
