--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,17 @@
       <div class="container">
         <div class="intro-content">
           <div class="intro-slogan">
-            <h1 class="intro-slogan__title">Расчёт вашего проекта за <br> 15 минут</h1>
+            <h1 class="intro-slogan__title">Расчёт вашего проекта за 15 минут</h1>
             <h2 class="intro-slogan__subtitle">От идеи к результату</h2>
             <button type="button" class="btn btn-primary btn--slogan">Расчитать</button>
           </div><!-- /intro-slogan -->
-          <div class="intro-media">
-            <img class=".img-responsive" src="img/intro/intro-main.png" width="636" height="527" alt="Изображение блока intro">
-          </div><!-- /intro-media -->
+
+          <picture>
+            <source srcset="img\intro\main-img_small@x1.webp" media="(max-width: 768px)">
+            <source srcset="img\intro\main-img@x1.webp">
+            <!-- <img srcset="default.jpg" alt="My default image"> -->
+        </picture>
+
         </div><!-- /intro-content -->
       </div><!-- /container -->
     </section><!-- /head -->
