--- a/src/index.html
+++ b/src/index.html
@@ -45,12 +45,12 @@
             <h2 class="intro-slogan__subtitle">От идеи к результату</h2>
             <button type="button" class="btn btn-primary btn--slogan">Расчитать</button>
           </div><!-- /intro-slogan -->
-
-          <picture>
-            <source srcset="img\intro\main-img_small@x1.webp" media="(max-width: 768px)">
-            <source srcset="img\intro\main-img@x1.webp">
-            <!-- <img srcset="default.jpg" alt="My default image"> -->
-        </picture>
+          <picture class="intro-media">
+            <!-- <source srcset="img/intro/main-img_small@x1.webp 1x, img/intro/main-img_small@x2.webp 2x" media="(max-width: 768px)"> -->
+            <source srcset="img/intro/1.webp 1x, img/intro/2.webp 2x">
+            <img src="#" alt="">
+            <!-- <img srcset="img/intro/intro.webp" width="" alt="Главное изображение секции Intro"> -->
+          </picture><!-- /intro-media -->
 
         </div><!-- /intro-content -->
       </div><!-- /container -->
