Best practice use added

--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,11 @@
             <h2 class="intro-slogan__subtitle">От идеи к результату</h2>
             <button type="button" class="btn btn-primary btn--slogan">Расчитать</button>
           </div><!-- /intro-slogan -->
-          <picture>
+          <picture class="intro-media">
             <source srcset="img/intro/main-img_small@1x.webp 1x, img/intro/main-img_small@2x.webp 2x"
               media="(max-width: 768px)">
             <source srcset="img/intro/main-img@1x.webp 1x, img/intro/main-img@2x.webp 2x">
-            <img class="img-responsive" src="img/intro/main-img_small@1x.webp" alt="Главное изображение секции Intro">
+            <img class="img-responsive" src="img/intro/main-img_small@1x.webp" width="636" height="527" alt="Главное изображение секции Intro">
           </picture><!-- /intro-media -->
         </div><!-- /intro-content -->
       </div><!-- /container -->
